<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.sim.chatserver</groupId>
    <artifactId>chat-server-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>chat-server-parent</name>

    <modules>
        <module>sim-core</module>
        <module>sim-web</module>
        <module>sim-app</module>
        <module>sim-email</module>
        <module>sim-playwright</module>
    </modules>


    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <jakarta.ws.rs.version>4.0.0</jakarta.ws.rs.version>
        <jakarta.persistence.version>3.2.0</jakarta.persistence.version>
        <jakarta.annotation.version>3.0.0</jakarta.annotation.version>
        <jakarta.transaction.version>2.0.1</jakarta.transaction.version>
        <jakarta.json.version>2.1.3</jakarta.json.version>
        <jakarta.cdi.version>4.1.0</jakarta.cdi.version>
        <jakarta.servlet.version>6.1.0</jakarta.servlet.version>
        <jakarta.inject.version>2.0.1</jakarta.inject.version>

        <hikaricp.version>7.0.2</hikaricp.version>
        <postgres.version>42.7.11</postgres.version>

        <junit.version>5.14.2</junit.version>
        <mockito.version>5.21.0</mockito.version>
        <mockito-inline.version>5.2.0</mockito-inline.version>

        <dependency-check.version>12.2.2</dependency-check.version>
        <dependency-check.failBuildOnCVSS>10</dependency-check.failBuildOnCVSS>
        <dependency-check.skip>false</dependency-check.skip>

        <!-- Dependency-Check runtime properties (override via -D in Jenkins) -->
        <nvdApiKey>${env.NVD_API_KEY}</nvdApiKey>
        <dataDirectory>${project.build.directory}/dependency-check-data</dataDirectory>
        <nvdMaxRetryCount>10</nvdMaxRetryCount>
        <nvdApiDelay>4000</nvdApiDelay>
        <connectionTimeout>120000</connectionTimeout>
        <readTimeout>120000</readTimeout>

        <openpdf.version>3.0.4</openpdf.version>
        <pdfbox.version>3.0.7</pdfbox.version>
        <flexmark.version>0.64.8</flexmark.version>

        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
        <maven.war.plugin.version>3.4.0</maven.war.plugin.version>
        <maven.surefire.plugin.version>3.5.4</maven.surefire.plugin.version>

        <jakarta.mail.version>2.1.3</jakarta.mail.version>
        <angus.mail.version>2.0.4</angus.mail.version>
        <greenmail.version>2.1.3</greenmail.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>jakarta.mail</groupId>
                <artifactId>jakarta.mail-api</artifactId>
                <version>${jakarta.mail.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.angus</groupId>
                <artifactId>angus-mail</artifactId>
                <version>${angus.mail.version}</version>
            </dependency>
            <dependency>
                <groupId>com.icegreen</groupId>
                <artifactId>greenmail</artifactId>
                <version>${greenmail.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                        <generatedSourcesDirectory>
                            ${project.build.directory}/generated-sources/annotations</generatedSourcesDirectory>
                        <generatedTestSourcesDirectory>
                            ${project.build.directory}/generated-test-sources/test-annotations</generatedTestSourcesDirectory>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>${maven.war.plugin.version}</version>
                    <configuration>
                        <failOnMissingWebXml>false</failOnMissingWebXml>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                </plugin>

                <!-- Centralized OWASP Dependency-Check version + defaults -->
                <plugin>
                    <groupId>org.owasp</groupId>
                    <artifactId>dependency-check-maven</artifactId>
                    <version>${dependency-check.version}</version>
                    <configuration>
                        <skip>${dependency-check.skip}</skip>
                        <formats>
                            <format>HTML</format>
                            <format>JSON</format>
                            <format>XML</format>
                        </formats>
                        <failBuildOnCVSS>${dependency-check.failBuildOnCVSS}</failBuildOnCVSS>

                        <nvdApiKey>${nvdApiKey}</nvdApiKey>
                        <nvdMaxRetryCount>${nvdMaxRetryCount}</nvdMaxRetryCount>
                        <nvdApiDelay>${nvdApiDelay}</nvdApiDelay>
                        <connectionTimeout>${connectionTimeout}</connectionTimeout>
                        <readTimeout>${readTimeout}</readTimeout>

                        <!-- Keep CI resilient if NVD is temporarily unavailable -->
                        <failOnError>false</failOnError>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!-- Run exactly once at parent aggregator -->
            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <inherited>false</inherited>
                <executions>
                    <execution>
                        <id>aggregate-report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>